# SDLTrial

./: .gitignore  .gitmodules  README.org  flake.nix
GettingStarted/: README.org
GettingStarted/cmake-4.0.2-tutorial-source/Step1/: CMakeCache.txt  CMakeLists.txt  Makefile  Tutorial  cmake_install.cmake  tutorial.cxx
GettingStarted/cmake-4.0.2-tutorial-source/Step2/: CMakeLists.txt  tutorial.cxx
GettingStarted/cmake-4.0.2-tutorial-source/Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
Platformer/: CMakeLists.txt  Platform  default.nix  result
Platformer/src/: main.cpp
SpriteBatcher/: CMakeLists.txt  README.org  default.nix
SpriteBatcher/shaders/: fragment.frag  vertex.vert
SpriteBatcher/src/: main.cpp
Triangle/: CMakeLists.txt  README.org  default.nix  result
Triangle/shaders/: fragment.frag
Triangle/src/: main.cpp
